--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
             "./src/setupTests.js"
         ]
     },
-    "devDwependencies": {
+    "devDependencies": {
         "@babel/core": "^7.12.3",
         "@babel/plugin-transform-async-to-generator": "^7.8.3",
         "@babel/plugin-transform-runtime": "^7.8.3",
@@ -77,6 +77,6 @@
         "less-vars-to-js": "^1.3.0",
         "prettier": "^2.1.2",
         "webpack": "^5.1.3",
-        "webpack-dev-server": "^3.11.0"
+        "webpack-dev-server": "^3.11.2"
     }
 }
