--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
         "eslint-plugin-react": "^7.21.5",
         "eslint-plugin-react-hooks": "^4.2.0",
         "extract-text-webpack-plugin": "^4.0.0-beta.0",
+        "file-loader": "^6.2.0",
         "html-webpack-plugin": "^4.5.0",
         "less": "^4.1.0",
         "less-loader": "^7.3.0",
